[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scenes/Table.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/PlayingSpot.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=3]
[ext_resource path="res://sprites/casinotexture.jpg" type="Texture" id=4]
[ext_resource path="res://scripts/StyleBoxBG/controlLargeBox.gd" type="Script" id=5]
[ext_resource path="res://scenes/EventLogContainer.tscn" type="PackedScene" id=6]
[ext_resource path="res://misc/animations/trayClose.tres" type="Animation" id=7]
[ext_resource path="res://scripts/GameControlBackground.gd" type="Script" id=8]
[ext_resource path="res://scripts/BottomUIController.gd" type="Script" id=9]
[ext_resource path="res://misc/MAINFONT.tres" type="DynamicFont" id=10]
[ext_resource path="res://misc/tempActionButtons.tres" type="ButtonGroup" id=31]
[ext_resource path="res://scripts/TempActionUI.gd" type="Script" id=32]
[ext_resource path="res://scripts/MoneyContainer.gd" type="Script" id=35]
[ext_resource path="res://misc/uitexttheme.tres" type="Theme" id=36]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.345098, 0.376471, 0.588235, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.415686, 0.454902, 0.717647, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.278431, 0.301961, 0.462745, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="Theme" id=5]
Button/fonts/font = ExtResource( 10 )
Button/styles/focus = null
Button/styles/hover = SubResource( 6 )
Button/styles/normal = SubResource( 4 )
Button/styles/pressed = SubResource( 7 )

[sub_resource type="Animation" id=2]
length = 0.001

[sub_resource type="Animation" id=3]
resource_name = "cardAnim"

[node name="Main" type="Node"]
script = ExtResource( 3 )
oc = Color( 0.0745098, 0.235294, 0.152941, 0.392157 )

[node name="DelayTimer" type="Timer" parent="."]

[node name="BackgroundWrapper" type="Node" parent="."]

[node name="Background" parent="BackgroundWrapper" instance=ExtResource( 1 )]
size_flags_horizontal = 5
size_flags_vertical = 5
texture = ExtResource( 4 )

[node name="GameControlWrapper" type="Control" parent="."]
anchor_left = 0.3
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
C = Color( 0.0470588, 0.14902, 0.0980392, 0.705882 )

[node name="UI Layer" type="CanvasLayer" parent="."]

[node name="UIWRAPPER" type="Control" parent="UI Layer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BottomUI" type="Control" parent="UI Layer/UIWRAPPER"]
anchor_left = 0.33
anchor_top = 0.86
anchor_right = 0.67
anchor_bottom = 0.98
margin_bottom = -6.10352e-05
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 462, 98 )
script = ExtResource( 9 )

[node name="ButtonActions" type="Control" parent="UI Layer/UIWRAPPER/BottomUI"]
anchor_left = -0.011
anchor_top = -0.16
anchor_right = 1.01
anchor_bottom = 0.1
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="VerticleCenterButtons" type="VBoxContainer" parent="UI Layer/UIWRAPPER/BottomUI/ButtonActions"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
alignment = 1

[node name="HorizontalCenterButtons" type="HBoxContainer" parent="UI Layer/UIWRAPPER/BottomUI/ButtonActions/VerticleCenterButtons"]
margin_right = 471.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="DealButton" type="Button" parent="UI Layer/UIWRAPPER/BottomUI/ButtonActions/VerticleCenterButtons/HorizontalCenterButtons"]
margin_right = 233.0
margin_bottom = 25.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 5 )
text = "Deal"

[node name="ClearBetButton" type="Button" parent="UI Layer/UIWRAPPER/BottomUI/ButtonActions/VerticleCenterButtons/HorizontalCenterButtons"]
margin_left = 237.0
margin_right = 471.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Clear Bet"

[node name="ChipActions" type="Control" parent="UI Layer/UIWRAPPER/BottomUI"]
anchor_top = 0.21
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 5 )

[node name="VerticleCenterChips" type="VBoxContainer" parent="UI Layer/UIWRAPPER/BottomUI/ChipActions"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HorizontalCenterChips" type="HBoxContainer" parent="UI Layer/UIWRAPPER/BottomUI/ChipActions/VerticleCenterChips"]
margin_top = 38.0
margin_right = 462.0
margin_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 6
alignment = 1

[node name="TempActionUI" type="Control" parent="UI Layer/UIWRAPPER"]
visible = false
margin_top = 127.0
margin_right = 200.0
margin_bottom = 327.0
script = ExtResource( 32 )
buttonGroup = ExtResource( 31 )

[node name="TempButtonVAlign" type="VBoxContainer" parent="UI Layer/UIWRAPPER/TempActionUI"]
margin_right = 40.0
margin_bottom = 40.0

[node name="HitButton" type="Button" parent="UI Layer/UIWRAPPER/TempActionUI/TempButtonVAlign" groups=["playerActionButtons"]]
margin_right = 74.0
margin_bottom = 20.0
group = ExtResource( 31 )
text = "Hit"

[node name="StandButton" type="Button" parent="UI Layer/UIWRAPPER/TempActionUI/TempButtonVAlign" groups=["playerActionButtons"]]
margin_top = 24.0
margin_right = 74.0
margin_bottom = 44.0
group = ExtResource( 31 )
text = "Stand"

[node name="DoubleButton" type="Button" parent="UI Layer/UIWRAPPER/TempActionUI/TempButtonVAlign" groups=["playerActionButtons"]]
margin_top = 48.0
margin_right = 74.0
margin_bottom = 68.0
group = ExtResource( 31 )
text = "Double"

[node name="SplitButton" type="Button" parent="UI Layer/UIWRAPPER/TempActionUI/TempButtonVAlign" groups=["playerActionButtons"]]
margin_top = 72.0
margin_right = 74.0
margin_bottom = 92.0
group = ExtResource( 31 )
text = "Split"

[node name="SurrenderButton" type="Button" parent="UI Layer/UIWRAPPER/TempActionUI/TempButtonVAlign" groups=["playerActionButtons"]]
margin_top = 96.0
margin_right = 74.0
margin_bottom = 116.0
group = ExtResource( 31 )
text = "Surrender"

[node name="MoneyContainer" type="Control" parent="UI Layer/UIWRAPPER"]
visible = false
anchor_left = 0.92
anchor_right = 1.0
margin_bottom = 50.0
script = ExtResource( 35 )

[node name="playerMoney" type="Label" parent="UI Layer/UIWRAPPER/MoneyContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 36 )
text = "Â£1000"
align = 1
valign = 1

[node name="EventLog" parent="UI Layer/UIWRAPPER" instance=ExtResource( 6 )]
visible = false

[node name="UI ANIMATIONS" type="AnimationPlayer" parent="UI Layer"]
playback_speed = 3.0
anims/RESET = SubResource( 2 )
anims/cardAnim = SubResource( 3 )
anims/trayClose = ExtResource( 7 )

[node name="CardTween" type="Tween" parent="."]

[node name="GameUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TableWrapper" type="Control" parent="GameUI"]
anchor_right = 0.3
anchor_bottom = 1.0

[node name="DealerPos" type="Control" parent="GameUI/TableWrapper"]
anchor_left = 0.5
anchor_top = 0.25
anchor_right = 0.5
anchor_bottom = 0.3

[node name="DealerSpot" parent="GameUI/TableWrapper/DealerPos" instance=ExtResource( 2 )]
dealer = true

[node name="PlayerPos" type="Control" parent="GameUI/TableWrapper"]
anchor_left = 0.5
anchor_top = 0.7
anchor_right = 0.5
anchor_bottom = 0.7
margin_right = -192.0

[node name="PlayerSpot" parent="GameUI/TableWrapper/PlayerPos" instance=ExtResource( 2 )]
anchor_left = 0.4
anchor_top = 0.7
anchor_right = 0.4
anchor_bottom = 0.7

[node name="CardSpawnPoint" type="Control" parent="GameUI/TableWrapper"]
anchor_left = 0.5
anchor_top = -0.2
anchor_right = 0.5
anchor_bottom = -0.2

[connection signal="pressed" from="UI Layer/UIWRAPPER/BottomUI/ButtonActions/VerticleCenterButtons/HorizontalCenterButtons/DealButton" to="." method="dealButton_pressed"]
[connection signal="pressed" from="UI Layer/UIWRAPPER/BottomUI/ButtonActions/VerticleCenterButtons/HorizontalCenterButtons/ClearBetButton" to="." method="clearBetButton_pressed"]
